# my-interpreter

./: .gitignore  CMakeLists.txt  README.md  main.cpp  q
eval/: eval.cpp  eval.hpp
examples/json/: print.json  print_int.json
logger/: Logger.cpp  Logger.hpp  logger.cpp  logger.hpp
nodes/: Nodes.hpp
nodes/datatypes/: DataTypes.hpp
nodes/datatypes/int/: Int.cpp  Int.hpp
nodes/datatypes/str/: Str.cpp  Str.hpp
nodes/file/: File.cpp  File.hpp
nodes/location/: Location.cpp  Location.hpp
nodes/statements/: Statements.hpp
nodes/statements/print/: Print.cpp  Print.hpp
nodes/term/: Term.cpp  Term.hpp
